--- a/src/less/folder.less
+++ b/src/less/folder.less
@@ -4,17 +4,32 @@
 @import '_fonts.less';
 
 html, body {
-  margin: 0;
+  margin: 20;
   padding: 0;
   font-family: "Source Sans Pro";
   font-size: 16px;
   line-height: 1.25;
-  min-width: 300px;
+  min-width: 450px;
 }
 
 #debug {
   color: red;
 }
+
+
+#content {
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 9pt;
+}
+
+label {
+  display: block;
+}
+input {
+  font-size: 14pt;
+}
+
 
 .add {
   border: none;
